# cai

./: .gitignore  README.md  evaluations.json  go.mod  go.sum  main.go
.github/workflows/: build-and-publish.yml  go.yml  go1.yml  manual-build-test-skip.yml  manual-build-test.yml  publish-release.yml
cairs/: .gitignore  Cargo.toml  README_AZURE_INTEGRATION.md  example.env  test.py
cairs/src/: evaluations.rs  main.rs  openai.rs  util.rs
cmd/: evaluatecmd.go  lscmd.go  rootcmd.go
pkg/: evaluations.go  listfiles.go  openai.go  pprocessfiles.go  processfiles.go  settings.go  type.go
